# Calculator

./: CMakeLists.txt  README.md  config.json
include/: ConfigManager.h  Tool.h  ToolRegistry.h
src/: ConfigManager.cpp  ToolRegistry.cpp  main.cpp  registerTools.cpp
src/tools/: CalculatorTool.cpp  CalculatorTool.h  ColorPickerTool.cpp  ColorPickerTool.h  TextEncryptTool.cpp  TextEncryptTool.h  TextStatsTool.cpp  TextStatsTool.h  UnitConverterTool.cpp  UnitConverterTool.h
